adding some demo of figure/equation reference
Signed-off-by: jmx <jmx@debian8-3>

--- a/XJTU-BSThesis_latex_2016/xjtuBS.tex
+++ b/XJTU-BSThesis_latex_2016/xjtuBS.tex
@@ -144,28 +144,31 @@ The key parts in drip irrigation facilities are emitters. The structural design 
     \centering
     \begin{subfigure}{.3\textwidth}
         \centering
-        \includegraphics[width=0.3\textwidth]{xjtu1.PNG}
+        \includegraphics[width=0.95\textwidth]{xjtu1.PNG}
         \caption{A}
     \end{subfigure}
     \begin{subfigure}{.3\textwidth}
         \centering
-        \includegraphics[width=0.3\textwidth]{xjtu1.PNG}
+        \includegraphics[width=0.95\textwidth]{xjtu1.PNG}
         \caption{B}
     \end{subfigure}
     \begin{subfigure}{.3\textwidth}
         \centering
-        \includegraphics[width=0.3\textwidth]{xjtu1.PNG}
+        \includegraphics[width=0.95\textwidth]{xjtu1.PNG}
         \caption{C}
     \end{subfigure}
-    \caption{测试子图}
+    \caption{测试子图}\label{fig_1}
 \end{figure}
 
+图\eqref{fig_1}
 
 公式的示例。
 
-\begin{equation}
+\begin{equation}\label{eq_1}
 \rho = \sum_i p_i  |\psi_i \rangle \langle \psi_i |
 \end{equation}
+
+式\eqref{eq_1}
 
 引用的示例。
 
